--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src="logo.jpg" class="h-12 rounded-full" alt="Flowbite Logo">
-      <span class="text-white self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Shibarium Refugees</span>
+      <span class="text-white self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Shibarium</span>
   </a>
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       <a href="">
