--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
     </script>
 </head>
 
-<body class="relative font-inter antialiased">
 
+
+
+<body style="background-color:red;" class="relative font-inter antialiased">
+
+<center >
+
+Admin is scammer don't trust this project 
+
+</center>
+
+<!--
     <main class="relative min-h-screen flex flex-col justify-center bg-slate-900 overflow-hidden">
         
 
@@ -448,7 +458,9 @@
  
 
     <script src="./particle-animation.js"></script>
+-->
 </body>
+
 
 </html>
 
